<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user.</string>


    <!-- profile /-->

    <!-- comment -->
    <string name="add_a_comment">Write a comment</string>
    <string name="foxy_logo">Foxy Logo</string>
    <string name="home_tab">Home tab</string>
    <string name="push_notification">Push Notification</string>
    <string name="get_support_at">Get support at …</string>
    <string name="like">Like</string>
    <string name="like_notification">Like Notification</string>

    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="comment_notification">Comment Notification</string>
    <string name="alert_setting">Alert Settings</string>
    <string name="txt_close">Close</string>
    <string name="post_now">Post Now</string>
    <string name="text">Text</string>
    <string name="picture">Picture</string>
    <string name="ad_unit_id2">ca-app-pub-4333945898832775/3779120498</string>

    <string name="find_it">find it</string>
    <string name="commented">commented</string>
    <string name="feedback_heading_1">We\'re working hard to giving you the best user experience</string>
    <string name="feedback_heading_2">Suggest us and leave your opinion to improve us.</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="msg_add_picture">Tap to add picture</string>
    <string name="msg_add_video">Tap to add video</string>
    <string name="delete">Delete</string>
    <string name="report_user">Report User</string>
    <string name="report_user_confirm">Are you sure you want to report this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="report_sheet_title">Choose reason to report this user</string>
    <string name="report_reason_1">It\'s fake</string>
    <string name="report_reason_2">Inappropriate content</string>
    <string name="report_reason_3">Fake profile</string>
    <string name="report_reason_4">Vandalism</string>
    <string name="report_reason_5">Promote nudity</string>
    <string name="reported">User Reported</string>
    <string name="profile_public">Public</string>
    <string name="profile_private">Private</string>
    <string name="follow_request_added">Follow request submitted</string>
    <string name="follow_request_removed">Follow request removed</string>
    <string name="follow_request">Follow Request</string>
    <string name="empty_feeds">No feeds to show at the moment</string>
    <string name="hint_search_users">Search users</string>
    <string name="profile_fetch">Fetching profile details..</string>
    <string name="buy_app">Buy This App</string>
    <string name="empty_results">No results found!</string>
    <string name="full_name">Full Name</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="update_info">Update Info</string>
    <string name="type_message">Type your message</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="continue_with">Continue with</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="noti_like_msg">Will notify when someone like your post</string>
    <string name="noti_comment_msg">Will notify when someone comment on your post</string>
    <string name="empty_comments">No comments to show.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="empty_notifications">No notifications at the moment</string>
    <string name="swipe_retry">( Swipe down to retry. )</string>
    <string name="add_post_title">Add Post Title</string>
    <string name="write_your_text">Write your text</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="your_name">Your name</string>
    <string name="store_add">Add story</string>
    <string name="follow_status_following">Following</string>
    <string name="follow_status_requested">Requested</string>
    <string name="follow_status_follow">Follow</string>
    <string name="someone_liked">liked your post</string>
    <string name="someone_commented">commented on your post</string>
    <string name="file_no">File unavailable</string>
    <string name="posted">Posted</string>
    <string name="view_amazin_post">View this amazing post on</string>
    <string name="post_deleted">Post deleted</string>
    <string name="post_reported">You reported this post</string>
    <string name="profile_basics_setup">You need to provide some basic information</string>
    <string name="edit_profile">Edit profile</string>
    <string name="err_field_name">Name can\'t be left empty</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="process_wait">Processing, Please wait!</string>
    <string name="profile_edit_msg">You need to provide some basic information</string>
    <string name="image_updated">Image Updated</string>
    <string name="something_wrong_update_image">Something went wrong while updating picture</string>
    <string name="title_bookmarks">BOOKMARKS</string>
    <string name="empty_stories">No stories to show.</string>
    <string name="title_settings">SETTINGS</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="swipe_retry_left">(Slide left to cancel)</string>
    <string name="recording_progress">Recording...</string>
    <string name="copied_msgs">Messages copied</string>
    <string name="copied_msg">Message copied</string>
    <string name="just_moment">Just a moment..</string>
    <string name="video_short_msg">Please choose video less than 10MB</string>
    <string name="title_feeds_public">Public feeds</string>
    <string name="title_feeds_private">Private feeds</string>
    <string name="story_media_from">Get story from</string>
    <string name="uploading_story">Uploading story</string>
    <string name="uploadded_story">Story added</string>
    <string name="err_field_comment">Comment can\'t be empty</string>
    <string name="comment_added">Comment posted</string>
    <string name="admin_block">BLOCKED by admin.</string>
    <string name="post_media_from">Get picture from</string>
    <string name="err_field_post_title">Title can\'t be empty</string>
    <string name="err_field_post_body">Post can\'t be empty</string>
    <string name="err_field_post_media">Pick a media</string>
    <string name="uploaded_post_media">Media upload completed</string>
    <string name="post_added">Post added to profile</string>
    <string name="nothing_found">Nothing found..</string>
    <string name="title_push_notification">Push Notification</string>
    <string name="settings_updated">Settings Updated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="siyanram">SIYAnRAM</string>
    <string name="title_feeds_trending">Trending feeds</string>
</resources>
