<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg_white"
    android:orientation="vertical"
    android:padding="16dp">

    <com.verbosetech.weshare.view.MontserratTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/are_you_sure"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.verbosetech.weshare.view.MontserratTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/yes"
        android:layout_below="@+id/title"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/sure_logout"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.verbosetech.weshare.view.MontserratTextView
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/yes"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.verbosetech.weshare.view.MontserratTextView
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@drawable/rounded_bg_blue"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>