<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@android:color/white">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/commentContainer"
                android:clipToPadding="false"
                android:paddingBottom="40dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp" />

            <LinearLayout
                android:id="@+id/empty_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="64dp"
                android:visibility="gone"
                android:weightSum="3">

                <ImageView
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/placeholder_chat" />

                <TextView
                    android:id="@+id/empty_view_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_comments" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/commentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_bg_white_with_border"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/list_item_comment_foxy_img"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/foxy_logo"
                    android:scaleType="centerCrop" />

                <com.verbosetech.weshare.view.MontserratEditText
                    android:id="@+id/add_a_comment_edittext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/add_a_comment"
                    android:textColorHint="#cacaca"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/btn_post_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="14dp"
                    android:layout_marginRight="14dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_send_primary_dark_16dp" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.cardview.widget.CardView>